--- a/META.yml
+++ b/META.yml
@@ -1,29 +1,35 @@
 --- #YAML:1.0
 name:                 VCS-Lite
-version:              0.09
-abstract:             TT wrapper for Text::WikiFormat
+version:              0.10
+abstract:             A minimal version control system
+author:
+  - Barbie <barbie@cpan.org>
+
+license:              artistic_2
 distribution_type:    module
 installdirs:          site
-license:              perl
-author:
-    - Barbie (barbie@cpan.org)
 
 requires:
+  perl:                     5.006
   Algorithm::Diff:          1.13
   Carp:                     0
   Getopt::Long:             0
 recommends:
-  Test::More:               0.45
+  Test::CPAN::Meta:         0
+  Test::CPAN::Meta::JSON:   0
   Test::Pod:                1.00
   Test::Pod::Coverage:      0.08
-  Test::CPAN::Meta:         0.12
 build_requires:
-  Test::More:               0.45
+  IO::File:                 0
+  Test::More:               0.70
 
 provides:
   VCS::Lite:
     file:     lib/VCS/Lite.pm
-    version:  0.09
+    version:  0.10
+  VCS::Lite::Delta:
+    file:     lib/VCS/Lite/Delta.pm
+    version:  0.10
 no_index:
   directory:
     - t
