--- a/META.yml
+++ b/META.yml
@@ -35,8 +35,12 @@ no_index:
     - t
     - examples
 
+resources:
+  license:    http://www.perlfoundation.org/artistic_license_2_0
+  bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=VCS-Lite
+  repository: http://github.com/barbie/vcs-lite
+
 meta-spec:
    version:   1.4
    url:       http://module-build.sourceforge.net/META-spec-v1.4.html
-generated_by: Hand 1.0
-
+generated_by: Barbie's Brain 1.0
